--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,7 @@
 
 <div class="container text-center">
 <h1>Список приложений</h1>
+<h1>эту строку я добавил из дома</h1>
 <br>
 <br>
 <form action="{% url 'todoapp' %}">
