--- a/templates/home.html
+++ b/templates/home.html
@@ -19,5 +19,10 @@
 </form>
 <br>
 <br>
+<form action="{% url 'vckpappusers' %}">
+  <input type="submit" value="создание скрипта для ВЦКП" class="btn btn-primary">
+</form>
+<br>
+<br>
 
 </div>
